<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/rainfall"
        android:layout_width="597dp"
        android:layout_height="880dp"
        android:contentDescription="@string/fail_rainfall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.4"
        app:srcCompat="@drawable/cuterainfull" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="179dp"
        android:layout_height="71dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:text="@string/Time"
        android:textSize="56sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock" />

    <ImageView
        android:id="@+id/lock"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="174dp"
        android:layout_marginRight="174dp"
        android:layout_marginBottom="217dp"
        android:contentDescription="@string/lockimg"
        app:layout_constraintBottom_toTopOf="@+id/shovel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lock" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="189dp"
        android:layout_height="32dp"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="514dp"
        android:text="@string/date"
        android:textSize="22sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/shovel"
        android:layout_width="115dp"
        android:layout_height="95dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="13dp"
        android:clickable="true"
        android:contentDescription="@string/shovelimg"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/watercan"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/plant13" />

    <ImageView
        android:id="@+id/watercan"
        android:layout_width="115dp"
        android:layout_height="95dp"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/waterimg"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant1"
        app:layout_constraintEnd_toStartOf="@+id/shovel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/plant20" />

    <ImageView
        android:id="@+id/plant3"
        android:layout_width="93dp"
        android:layout_height="107dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:clickable="true"
        android:contentDescription="@string/threeimg"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plant2"
        app:layout_constraintTop_toBottomOf="@+id/shovel"
        app:srcCompat="@drawable/plant24" />

    <ImageView
        android:id="@+id/plant1"
        android:layout_width="93dp"
        android:layout_height="112dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:contentDescription="@string/oneimg"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant4"
        app:layout_constraintEnd_toStartOf="@+id/plant2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watercan"
        app:srcCompat="@drawable/plant19" />

    <ImageView
        android:id="@+id/plant2"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="41dp"
        android:clickable="true"
        android:contentDescription="@string/twoimg"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant5"
        app:layout_constraintEnd_toStartOf="@+id/plant3"
        app:layout_constraintStart_toEndOf="@+id/plant1"
        app:layout_constraintTop_toBottomOf="@+id/watercan"
        app:srcCompat="@drawable/plant17" />

    <ImageView
        android:id="@+id/plant4"
        android:layout_width="98dp"
        android:layout_height="112dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:contentDescription="@string/fourimg"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plant5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant1"
        app:srcCompat="@drawable/plant15" />

    <ImageView
        android:id="@+id/plant5"
        android:layout_width="98dp"
        android:layout_height="95dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="57dp"
        android:clickable="true"
        android:contentDescription="@string/fiveimg"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plant6"
        app:layout_constraintStart_toEndOf="@+id/plant4"
        app:layout_constraintTop_toBottomOf="@+id/plant2"
        app:srcCompat="@drawable/plant21" />

    <ImageView
        android:id="@+id/plant6"
        android:layout_width="98dp"
        android:layout_height="107dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="57dp"
        android:clickable="true"
        android:contentDescription="@string/siximg"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plant5"
        app:layout_constraintTop_toBottomOf="@+id/plant3"
        app:srcCompat="@drawable/plant16" />

    <ImageView
        android:id="@+id/cuteSun"
        android:layout_width="106dp"
        android:layout_height="98dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/resetting_sun"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cutesun" />

</androidx.constraintlayout.widget.ConstraintLayout>