<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="179dp"
        android:layout_height="71dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="546dp"
        android:text="@string/Time"
        android:textSize="56sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/lock"
        android:layout_width="80dp"
        android:layout_height="71dp"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/lock"
        android:contentDescription="@string/lockimg" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="189dp"
        android:layout_height="32dp"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="514dp"
        android:text="@string/date"
        android:textSize="22sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/shovel"
        android:layout_width="140dp"
        android:layout_height="126dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/watercan"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/plant13"
        android:focusable="true"
        android:contentDescription="@string/shovelimg" />

    <ImageView
        android:id="@+id/watercan"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="37dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant1"
        app:layout_constraintEnd_toStartOf="@+id/shovel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/plant20"
        android:focusable="true"
        android:contentDescription="@string/waterimg" />

    <ImageView
        android:id="@+id/plant3"
        android:layout_width="99dp"
        android:layout_height="131dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="2dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plant2"
        app:layout_constraintTop_toBottomOf="@+id/shovel"
        app:srcCompat="@drawable/plant24"
        android:contentDescription="@string/threeimg"
        android:focusable="true" />

    <ImageView
        android:id="@+id/plant6"
        android:layout_width="106dp"
        android:layout_height="137dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plant5"
        app:layout_constraintTop_toBottomOf="@+id/plant2"
        app:srcCompat="@drawable/plant16"
        android:focusable="true"
        android:contentDescription="@string/siximg" />

    <ImageView
        android:id="@+id/plant1"
        android:layout_width="106dp"
        android:layout_height="134dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/plant2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watercan"
        app:srcCompat="@drawable/plant19"
        android:focusable="true"
        android:contentDescription="@string/oneimg" />

    <ImageView
        android:id="@+id/plant2"
        android:layout_width="133dp"
        android:layout_height="130dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/plant6"
        app:layout_constraintEnd_toStartOf="@+id/plant3"
        app:layout_constraintStart_toEndOf="@+id/plant1"
        app:layout_constraintTop_toBottomOf="@+id/shovel"
        app:srcCompat="@drawable/plant17"
        android:focusable="true"
        android:contentDescription="@string/twoimg" />

    <ImageView
        android:id="@+id/plant4"
        android:layout_width="117dp"
        android:layout_height="137dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plant5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plant15"
        android:contentDescription="@string/fourimg"
        android:focusable="true" />

    <ImageView
        android:id="@+id/plant5"
        android:layout_width="113dp"
        android:layout_height="136dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plant6"
        app:layout_constraintStart_toEndOf="@+id/plant4"
        app:layout_constraintTop_toBottomOf="@+id/plant2"
        app:srcCompat="@drawable/plant21"
        android:focusable="true"
        android:contentDescription="@string/fiveimg" />

</androidx.constraintlayout.widget.ConstraintLayout>