<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">

    <ImageView
        android:id="@+id/watercup"
        android:layout_width="300dp"
        android:layout_height="298dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="89dp"
        android:contentDescription="@string/cup_of_water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cupwater" />

    <ImageView
        android:id="@+id/wordbubble"
        android:layout_width="244dp"
        android:layout_height="202dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:contentDescription="@string/bubble_of_words"
        app:layout_constraintBottom_toTopOf="@+id/watercup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wordbubble" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="180dp"
        android:layout_height="108dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/reminder_cute"
        android:text="@string/remember_to_drink_water_too"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/wordbubble"
        app:layout_constraintEnd_toEndOf="@+id/wordbubble"
        app:layout_constraintStart_toStartOf="@+id/wordbubble"
        app:layout_constraintTop_toTopOf="@+id/wordbubble" />
</androidx.constraintlayout.widget.ConstraintLayout>